recognize _fed_setup property in C