@@ -674,11 +674,11 @@ public enum TargetProperty {
     }),
 
     /**
-     * Directs the Python target to include the associated C file used for
+     * Directs the C or Python target to include the associated C file used for
      * setting up federated execution before processing the first tag.
      */
     FED_SETUP("_fed_setup", FILES.type,
-              List.of(Target.Python),
+              Arrays.asList(Target.C, Target.Python),
               (config) -> ASTUtils.toElement("\"" + config.fedSetupPreamble + "\""),
               (config, value, err) ->
                   config.fedSetupPreamble = StringUtil.removeQuotes(ASTUtils.elementToSingleString(value))
